<resources>
  <string name="app_name">MM Dictionary</string>

  <string name="app_full_name">Meitei Mayek Dictionary</string>

  <string name="version">v0.0.1</string>

  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">@string/app_full_name</string>
  <string name="nav_header_desc">Navigation header</string>

  <string name="title_activity_home">Home</string>
  <string name="title_activity_about_me">About Me</string>

  <string name="tap_favourite">Favorite</string>
  <string name="tap_browse">Browse</string>

  <string name="nav_home">Home</string>
  <string name="nav_about_me">About Me</string>
  <string name="nav_share">Share</string>

  <string name="browse_choose">Choose a language…</string>
  <string name="language_eng">English</string>
  <string name="language_mani">Meitei Mayek</string>
  <string name="language_beng">Bengali</string>

  <string name="devWithBy1">Developed with</string>
  <string name="love">Love</string>
  <string name="devWithBy2">by GyanendroKh</string>
  <string name="no_data">There is no data right now…</string>
  <string name="no_result_found">No Result Found…</string>
  <string name="there_is_nothing_in_your_favorite">There is nothing in your favorite.</string>

  <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
  <string name="unable_to_fetch_data">Unable to fetch data at the moment.</string>
</resources>
