<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".activity.HomeActivity">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
      android:id="@+id/home_app_bar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingTop="60dp"
      android:theme="@style/AppTheme.NoActionBar.AppBarOverlay">

      <android.support.design.widget.TabLayout
        android:id="@+id/home_tab_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.TabItem
          android:id="@+id/home_tap_fav"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/tap_favourite" />

        <android.support.design.widget.TabItem
          android:id="@+id/home_tap_browse"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/tap_browse" />

      </android.support.design.widget.TabLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
      android:id="@+id/home_view_pager"
      android:layout_width="match_parent"
      android:layout_height="match_parent" />

  </LinearLayout>

  <com.lapism.searchview.widget.SearchView
    android:id="@+id/search_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:transitionName="searchView"
    app:layout_behavior="@string/search_behavior"
    app:search_hint="@string/title_activity_home" />

</FrameLayout>
