<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:paddingTop="20dp">

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:text="@string/browse_choose"
    android:textStyle="bold"
    android:textSize="19sp"
    android:layout_margin="5dp" />

  <android.support.v7.widget.CardView
    android:id="@+id/browse_english"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="2dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:contentPadding="12dp"
    app:cardCornerRadius="0dp">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/language_eng"/>

  </android.support.v7.widget.CardView>

  <android.support.v7.widget.CardView
    android:id="@+id/browse_mani"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="2dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:contentPadding="12dp"
    app:cardCornerRadius="0dp">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/langugae_mani"/>

  </android.support.v7.widget.CardView>

  <android.support.v7.widget.CardView
    android:id="@+id/browse_bengali"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="2dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:contentPadding="12dp"
    app:cardCornerRadius="0dp">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/language_beng"/>

  </android.support.v7.widget.CardView>

</android.support.v7.widget.LinearLayoutCompat>